--- a/templates/temperature/index.html
+++ b/templates/temperature/index.html
@@ -1,7 +1,9 @@
-<body>
+{% extends "common/base.html" %}
 
+{% block title %}Aquarium Project - Temperature{% endblock %}
+
+{% block content %}
 <h3>Data read from database:</h3>
-
 {% if temp_list %}
 <table width="100%" border="1">
 <tr>
@@ -18,5 +20,4 @@
 {% else %}
     <p>No temperature data are available.</p>
 {% endif %}
-
-</body>
+{% endblock %}
