Added filter module to server

--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -9,6 +9,7 @@
         {% block sidebar %}
         <ul>
             <li><a href="{% url 'temperature_module:index_get' %}">Temperature</a></li>
+            <li><a href="{% url 'filter_module:index_get' %}">Filter</a></li>
             <li><a href="{% url 'stat_module:index_get' %}">Home</a></li>
         </ul>
         {% endblock %}
