Added test model form for temperature schedule

--- a/templates/common/schedule.html
+++ b/templates/common/schedule.html
@@ -19,5 +19,9 @@
         {% endfor %}
         </tr>
     </table>
+    <h4>Add schedule rule</h4>
+    <form method="post" action="">
+        {{ schedule_form }}
+    </form>
 {% endblock %}
 </div>
