--- a/templates/common/schedule.html
+++ b/templates/common/schedule.html
@@ -40,5 +40,9 @@
         <button type="submit" formmethod="post" formaction="{% url edit_view edited_id %}">Submit</button>
     </form>
     {% endif %}
+    {% load staticfiles %}
+    <script type="text/javascript" src="{% static "jquery.js" %}"></script>
+    <script type="text/javascript">var schedule_list = {{ schedule_list | safe }}</script>
+    <script type="text/javascript" src="{% static "check_task.js" %}"></script>
 {% endblock %}
 </div>
