--- a/templates/common/schedule.html
+++ b/templates/common/schedule.html
@@ -1,3 +1,8 @@
+{% load staticfiles %}
+<script type="text/javascript" src="{% static "jquery.js" %}"></script>
+<script type="text/javascript">var schedule_list = {{ schedule_list | safe }}</script>
+<script type="text/javascript" src="{% static "check_task.js" %}"></script>
+
 <div id="schedule">
 {% block schedule %}
     <table width="100%">
@@ -27,22 +32,18 @@
     </table>
     {% if not edited_id %}
     <h4>Add schedule rule</h4>
-    <form method="post" action="">
+    <form method="post" action="" onsubmit="return validate()">
         {% csrf_token %}
         {{ schedule_form }}
-        <button type="submit" formmethod="post" formaction="{% url add_view %}">Add</button>
+        <button class="send" type="submit" formmethod="post" formaction="{% url add_view %}">Add</button>
     </form>
     {% else %}
     <h4>Edit schedule rule</h4>
-    <form method="post" action="">
+    <form method="post" action="" onsubmit="return validate()">
         {% csrf_token %}
         {{ schedule_form }}
-        <button type="submit" formmethod="post" formaction="{% url edit_view edited_id %}">Submit</button>
+        <button class="send" type="submit" formmethod="post" formaction="{% url edit_view edited_id %}">Submit</button>
     </form>
     {% endif %}
-    {% load staticfiles %}
-    <script type="text/javascript" src="{% static "jquery.js" %}"></script>
-    <script type="text/javascript">var schedule_list = {{ schedule_list | safe }}</script>
-    <script type="text/javascript" src="{% static "check_task.js" %}"></script>
 {% endblock %}
 </div>
