Introduced schedule in filter_module

--- a/templates/filter/index.html
+++ b/templates/filter/index.html
@@ -20,4 +20,5 @@
 {% else %}
     <p>No filter data are available.</p>
 {% endif %}
+<a href="{% url 'filter_module:schedule_get' %}">Schedule</a>
 {% endblock %}
