--- a/templates/common/schedule.html
+++ b/templates/common/schedule.html
@@ -5,7 +5,15 @@
 {% block content %}
 {% load staticfiles %}
 <script type="text/javascript" src="{% static "jquery.js" %}"></script>
-<script type="text/javascript">var schedule_list = {{ schedule_list | safe }}</script>
+<script type="text/javascript">
+    var schedule_list = {{ schedule_list | safe }};
+    var currently_edited_task =
+    {% if not edited_task %}
+        null;
+    {% else %}
+        {{ edited_task | safe }};
+    {% endif %}
+    </script>
 <script type="text/javascript" src="{% static "check_task.js" %}"></script>
 
 <div id="schedule">
@@ -35,7 +43,7 @@
         {% endfor %}
         </tr>
     </table>
-    {% if not edited_id %}
+    {% if not edited_task %}
     <h4>Add schedule rule</h4>
     <form method="post" action="" onsubmit="return validate()">
         {% csrf_token %}
@@ -47,7 +55,7 @@
     <form method="post" action="" onsubmit="return validate()">
         {% csrf_token %}
         {{ schedule_form }}
-        <button class="send" type="submit" formmethod="post" formaction="{% url edit_view edited_id %}">Submit</button>
+        <button class="send" type="submit" formmethod="post" formaction="{% url edit_view edited_task.id %}">Submit</button>
     </form>
     {% endif %}
 {% endblock %}
